--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -3394,20 +3394,28 @@
 <input type="hidden" name="attr_unarmedcombat" min="0" value="0" />
 <script type="text/worker">
   const sheetAttribues = {
-	"attributes": ["body", "agility", "reaction", "strength", "willpower", "logic", "intuition", "charisma", "edge"],
-	"translationsAttributes": ["attribute", "body", "agility", "reaction", "strength", "willpower", "logic", "intuition", "charisma", "edge", "none"],
-	"calculatedAttributes": ['body', 'agility', 'reaction', 'strength', 'willpower', 'logic', 'intuition','charisma','magic', 'resonance'],
-	"repeating": ["quality", "martial", "items", "range", "melee", "armor", "spell", "preps", "ritual", "powers", "forms", "vehicle", "augementations", "lifestyle", "contacts", "programs"],
-	"repeatingSkills": ["active", "knowledge", "language"],
-	"tabs": [`core`, `arms`, `augs`, `gear`, `magic`, `matrix`, `social`, `vehicle`, `options`],
-	"woundCalculation": ["high_pain_tolerance", "low_pain_tolerance", "damage_compensators_physical", "damage_compensators_stun", "stun", "physical"],
-	"mentalLimits": ["intuition", "willpower", "logic"],
-	"physicalLimits": ["body", "reaction", "strength"],
-	"socialLimits": ["essence", "willpower", "charisma"],
+	attributes: ["body", "agility", "reaction", "strength", "willpower", "logic", "intuition", "charisma", "edge"],
+	translationsAttributes: ["attribute", "body", "agility", "reaction", "strength", "willpower", "logic", "intuition", "charisma", "edge", "none"],
+	calculatedAttributes: ['body', 'agility', 'reaction', 'strength', 'willpower', 'logic', 'intuition','charisma','magic', 'resonance'],
+	repeating: ["quality", "martial", "items", "range", "melee", "armor", "spell", "preps", "ritual", "powers", "forms", "vehicle", "augementations", "lifestyle", "contacts", "programs"],
+	repeatingSkills: ["active", "knowledge", "language"],
+  tabs: [`core`, `arms`, `augs`, `gear`, `magic`, `matrix`, `social`, `vehicle`, `options`],
+	woundCalculation: ["high_pain_tolerance", "low_pain_tolerance", "damage_compensators_physical", "damage_compensators_stun", "stun", "physical"],
+  attributeLimits: ['mental_limit', 'physical_limit', 'social_limit'],
+	mental_limit: ["intuition", "willpower", "logic"],
+	physical_limit: ["body", "reaction", "strength"],
+	social_limit: ["essence", "willpower", "charisma"],
+  lift_carry: ["body", "strength", "lift_carry_modifier"],
+  overflow: ["body", "overflow_modifier"],
+  soak: ["body", "armor_rating", "soak_modifier", "soak_temp", `soak_temp_flag`],
+  defense: ["reaction", "intuition", "defense_modifier", "defense_temp", `defense_temp_flag`],
+  judge_intentions: ["charisma", "intuition", "judge_intentions_modifier"],
+  composure: ["charisma", "willpower", "composure_modifier"],
+  memory: ["logic", "willpower", "memory_modifier"]
 }
 
-const errorMessage = error => console.error(`%c ${error}`, "color: orange; font-weight:14px; font-weight:bold;");
-const warningMessage = error => console.warn(`%c ${error}`, "color: yellow; font-weight:14px; font-weight:bold;");
+const errorMessage = error => console.error(`%c ${error}`, "color: maroon; font-weight:14px; font-weight:bold;");
+const warningMessage = error => console.warn(`%c ${error}`, "color: darkorange; font-weight:14px; font-weight:bold;");
 
 const functions = {
   convertIntegerNegative: number => number > 0 ? -Math.abs(number) : number,
@@ -3439,18 +3447,33 @@ const functions = {
 	sumIntegers: numbers => numbers.reduce((a,b) => a + b, 0),
 
   shadowrun: {
+    attributeFactory: attrs => {
+      attrs = functions.shadowrun.processTempFlags(attrs)
+      attrs = functions.parseIntegers(attrs)
+      attrs = functions.shadowrun.calculateBonuses(attrs)
+      return attrs
+    },
     buildDisplay: (base, bonus) => bonus === 0 ? base : `${base} (${base + bonus})`,
     calculateBonuses: attrs => {
-      let bonus = 0
-      for (let [key, value] of Object.entries(attrs)) { key.includes('modifier') || key.includes('temp') ? bonus += value : 0 }
-      return bonus
+      attrs.bonus = 0
+      for (let [key, value] of Object.entries(attrs)) { 
+        if (key.includes('modifier') || key.includes('temp')) {
+          attrs.bonus += value
+          delete attrs[key]
+        }
+      }
+      return attrs
     },
-
     calculateLimitTotal: attrs => Math.ceil((attrs[0] + attrs[1] + (attrs[2] * 2))/3),
-    processTempFlags: (attribute, attrs) => {
+    calculateRunSpeed: (agility, modifier) => (agility * 4) + modifier,
+    calculateWalkSpeed:(agility, modifier) => (agility * 2) + modifier,
+    findFlagInKeys: attrs => Object.keys(attrs).find(key => key.includes('_flag')),
+    processTempFlags: attrs => {
       try {
-        attrs[`${attribute}_temp_flag`] === "on" ? false : delete attrs[`${attribute}_temp`];
-        delete attrs[`${attribute}_temp_flag`];
+        const tempFlag = functions.shadowrun.findFlagInKeys(attrs)
+        const attrName = tempFlag.split('_temp_flag')[0]
+        attrs[`${tempFlag}`] === "on" ? false : delete attrs[`${attrName}_temp`];
+        delete attrs[`${tempFlag}`];
         return attrs
       } catch (error) {
         errorMessage(error)
@@ -3522,12 +3545,11 @@ const updateTab = attr => functions.setAttributes({tab: attr})
 const updateAttributes = (array, attribute) => {
   try {
     getAttrs(array, attrs => {
-      attrs = functions.shadowrun.processTempFlags(attribute, attrs)
-      attrs = functions.parseIntegers(attrs)
-      const base = attrs[`${attribute}_base`], bonus = functions.shadowrun.calculateBonuses(attrs)
+      attrs = functions.shadowrun.attributeFactory(attrs)
+      const base = attrs[`${attribute}_base`]
       functions.setAttributes({
-        [attribute]: base + bonus,
-        [`display_${attribute}`]: functions.shadowrun.buildDisplay(base, bonus)
+        [attribute]: unctions.sumIntegers([base, attrs.bonus]),
+        [`display_${attribute}`]: functions.shadowrun.buildDisplay(base, attrs.bonus)
       })
     })
   } catch (error) {
@@ -3541,37 +3563,50 @@ const updateLimitTotal = attrs => {
 }
 
 //physical, social, mental
-const updateLimits = type => {
+const updateLimits = attributeLimit => {
   try {
-    const limitsAttributes = sheetAttribues[`${type}Limits`];
-    let array = [`${type}_limit_modifier`, `${type}_limit_temp`, `${type}_limit_temp_flag`].concat(limitsAttributes);
+    const array = sheetAttribues[attributeLimit].concat([`${attributeLimit}_modifier`, `${attributeLimit}_temp`, `${attributeLimit}_temp_flag`])
     getAttrs(array, attrs => {
-        attrs = functions.shadowrun.processTempFlags(`${type}_limit`, attrs)
-        attrs = functions.parseIntegers(attrs)
-
-        const bonus = functions.shadowrun.calculateBonuses(attrs)
-        delete attrs[`${type}_limit_modifier`]
-        delete attrs[`${type}_limit_temp`]
-
-        const total = functions.shadowrun.updateLimitTotal(attrs)
-
-        functions.setAttributes({[`${type}_limit`]: total + bonus})
+        attrs = functions.shadowrun.attributeFactory(attrs)
+        const bonus = attrs.bonus
+        delete attrs.bonus
+        const base = functions.shadowrun.updateLimitTotal(attrs)
+        functions.setAttributes({
+          [attributeLimit]: functions.sumIntegers([base, bonus])
+        })
     })
   } catch (error) {
     errorMessage(error)
   }
 }
 
+const updateMovement = () => {
+  try {
+    getAttrs(["agility", "walk_modifier", "run_modifier"], attrs => {
+      attrs = functions.parseIntegers(attrs)
+      functions.setAttributes({
+        walk: functions.shadowrun.calculateWalkSpeed(attrs.agility, attrs.walk_modifier),
+        run: functions.shadowrun.calculateRunSpeed(attrs.agility, attrs.run_modifier)
+      })
+    })
+  } catch (error) {
+     errorMessage(error)
+  }
+}
 
-    var update_movement = () => {
-      getAttrs(["agility", "walk_modifier", "run_modifier"], (v) => {
-        const agi = parseInt(v.agility) || 0, wmod = parseInt(v.walk_modifier) || 0, rmod = parseInt(v.run_modifier) || 0;
-        let update = {};
-        update["walk"] = (agi * 2) + wmod;
-        update["run"] = (agi * 4) + rmod;
-        setAttrs(update);
-      });
-    };const versioning = version => {
+const updateDerivedAttribute = derivedAttribute => {
+  try {
+    getAttrs(sheetAttribues[derivedAttribute], attrs => {
+      attrs = functions.shadowrun.attributeFactory(attrs)
+      const sum = functions.sumIntegers(Object.values(attrs))
+      functions.setAttributes({[derivedAttribute]: sum})
+    })
+  } catch (error) {
+    errorMessage(error)
+  }
+}
+
+  const versioning = version => {
   	console.log(`%c Shadowrun 5th Edition versioning, ${version}`, "color: darkblue; font-weight:bold");
 
     switch(true) {
@@ -3643,89 +3678,88 @@ const onepointthreefive = () => {
     });  
 };
   
-  on("sheet:opened", () => {
-		getAttrs(["version"], v => { versioning(parseFloat(v.version) || 1); });
+  on('sheet:opened', () => {
+		getAttrs(['version'], v => { versioning(parseFloat(v.version) || 1); });
 		translations();
 	});
 
+  on('clicked:shots_remove clicked:shots_add', eventinfo => updateShotsFired(eventinfo.triggerName))
 
-  on("clicked:shots_remove clicked:shots_add", eventinfo => updateShotsFired(eventinfo.triggerName))
+	on('clicked:primary_ammo', () => updateAmmoWithShotsFired())
 
-	on("clicked:primary_ammo", () => updateAmmoWithShotsFired())
-
-  on("clicked:reload", () => updateAmmoWithMax())
+  on('clicked:reload', () => updateAmmoWithMax())
 
 	sheetAttribues.tabs.forEach(attr => on(`clicked:tab_${attr}`, () => updateTab(attr)))
 
-	on("change:agility change:walk_modifier change:run_modifier", () => updateMovement())
+	on('change:agility change:walk_modifier change:run_modifier', () => updateMovement())
 
-  on("change:body change:strength change:lift_carry_modifier", () => update_common_rolls(["body", "strength", "lift_carry_modifier"]))
+  on('change:body change:strength change:lift_carry_modifier', () => updateDerivedAttribute('lift_carry'))
 
-  on("change:body change:strength", () => updateLimits("physical"))
+  on('change:body change:strength', () => updateLimits('physical_limit'))
 
-	on("change:body", () => {
-			update_common_rolls(["body", "overflow_modifier"])
-			update_common_rolls(["body", "armor_rating", "soak_modifier", "soak_temp", `soak_temp_flag`])
-			update_track("physical")
+	on('change:body', () => {
+      updateDerivedAttribute('overflow')
+      updateDerivedAttribute('soak')
+			update_track('physical')
 	})
 
-  on("change:reaction change:intuition", () => {
-    update_common_rolls(["reaction", "intuition", "defense_modifier", "defense_temp", `defense_temp_flag`])
+  on('change:reaction change:intuition', () => {
+    updateDerivedAttribute('defense')
     update_initiative()
   })
 
-  on("change:reaction", () => updateLimits("physical"))
+  on('change:reaction', () => updateLimits('physical_limit'))
 
-  on("change:intuition", () => {
-    updateLimits("mental")
-    update_common_rolls(["charisma", "intuition", "judge_intentions_modifier"])
+  on('change:intuition', () => {
+    updateLimits('mental_limit')
+    updateDerivedAttribute('judge_intentions')
   })
 
-	on("change:willpower", () => {
-		update_common_rolls(["charisma", "willpower", "composure_modifier"])
-		update_common_rolls(["logic", "willpower", "memory_modifier"])
-		update_track("stun")
-		updateLimits("social")
-		updateLimits("mental")
+	on('change:willpower', () => {
+    updateDerivedAttribute('composure')
+    updateDerivedAttribute('memory')
+		update_track('stun')
+		updateLimits('social_limit')
+		updateLimits('mental_limit')
 	})
 
-  on("change:logic change:memory_modifier", () => update_common_rolls(["logic", "willpower", "memory_modifier"]))
+  on('change:logic change:memory_modifier', () => updateDerivedAttribute('memory'))
 
-	on("change:logic", () => updateLimits("mental")) 
+	on('change:logic', () => updateLimits('mental_limit')) 
 
-  on("change:charisma change:composure_modifier", eventinfo => update_common_rolls(["charisma", "willpower", "composure_modifier"]))
+  on('change:charisma change:composure_modifier', eventinfo => updateDerivedAttribute('composure'))
 
-  on("change:charisma change:judge_intentions_modifier", eventinfo => update_common_rolls(["charisma", "intuition", "judge_intentions_modifier"]))
+  on('change:charisma change:judge_intentions_modifier', eventinfo => updateDerivedAttribute('judge_intentions'))
 
-  on("change:charisma change:essence", eventinfo => updateLimits("social"))
+  on('change:charisma change:essence', eventinfo => updateLimits('social_limit'))
 
-	on("change:physical_modifier change:flag_drone", () => update_track("physical"))
+	on('change:physical_modifier change:flag_drone', () => update_track('physical'))
 
-	on("change:stun_modifier", () => update_track("stun"))
+	on('change:stun_modifier', () => update_track('stun'))
 
-	on("change:initiative_modifier change:initiative_temp change:initiative_temp_flag", () => update_initiative())
+	on('change:initiative_modifier change:initiative_temp change:initiative_temp_flag', () => update_initiative())
 
-	on("change:defense_modifier change:defense_temp change:defense_temp_flag", () => update_common_rolls(["reaction", "intuition", "defense_modifier", "defense_temp", `defense_temp_flag`]))
+	on('change:defense_modifier change:defense_temp change:defense_temp_flag', () => updateDerivedAttribute('defense'))
 
-	on("change:armor_rating change:soak_modifier change:soak_temp change:soak_temp_flag", () => update_common_rolls(["body", "armor_rating", "soak_modifier", "soak_temp", `soak_temp_flag`]))
+	on('change:armor_rating change:soak_modifier change:soak_temp change:soak_temp_flag', () => updateDerivedAttribute('soak'))
 
-	on("change:mental_limit_modifier change:mental_limit_temp change:mental_limit_temp_flag change:physical_limit_modifier change:physical_limit_temp change:physical_limit_temp_flag change:social_limit_modifier change:social_limit_temp change:social_limit_temp_flag", eventinfo => updateLimits(eventinfo.sourceAttribute.split("_")[0]));
+  sheetAttribues.attributeLimits.forEach(attr => on(`change:${attr}_modifier change:${attr}_temp change:${attr}_temp_flag`, () => updateLimits([`${attr}`])))
 
 	sheetAttribues.woundCalculation.forEach(attr => on(`change:${attr}`, () => update_wounds()))
 
-	on("clicked:cond_reset_physical clicked:cond_reset_stun", eventinfo => resetConditionTrack(eventinfo))
+	on('clicked:cond_reset_physical clicked:cond_reset_stun', eventinfo => resetConditionTrack(eventinfo))
 
-	on("change:edge_toggle", eventinfo => edgeToggle(eventinfo))
+	on('change:edge_toggle', eventinfo => edgeToggle(eventinfo))
 
-	on("change:device_rating change:matrix_modifier", () => updateMatrixMaximum())
+	on('change:device_rating change:matrix_modifier', () => updateMatrixMaximum())
 
-	on("change:intuition change:astral_mod_modifier", () => updateAstralInitiative())
+	on('change:intuition change:astral_mod_modifier', () => updateAstralInitiative())
 
-	on("change:initiative_dice_modifier change:edge_toggle change:initiative_dice_temp change:initiative_dice_temp_flag", () => updateInitiative())
+	on('change:initiative_dice_modifier change:edge_toggle change:initiative_dice_temp change:initiative_dice_temp_flag', () => updateInitiative())
 
-	on("change:astral_dice_modifier change:edge_toggle", () => updateAstralInitiativeDice())
+	on('change:astral_dice_modifier change:edge_toggle', () => updateAstralInitiativeDice())
 
-	on("change:host_rating change:data_processing change:pilot change:intuition change:matrix_mod_modifier change:level change:matrix_dice_modifier change:edge_toggle", () => updateMatrixInitiative())
+	on('change:host_rating change:data_processing change:pilot change:intuition change:matrix_mod_modifier change:level change:matrix_dice_modifier change:edge_toggle', () => updateMatrixInitiative())
 
   sheetAttribues.calculatedAttributes.forEach(attribute => {
       const attributeArray = [`${attribute}_base`, `${attribute}_modifier`, `${attribute}_temp`, `${attribute}_temp_flag`]
@@ -3798,36 +3832,6 @@ const onepointthreefive = () => {
 		};
 	});
 
-	// COMMON ROLLS: MEOMORY, JUDGE INTETIONS, COMPOSURE, LIFT & CARRY, OVERFLOW, DEFENSE, & SOAK ROLLS
-	const update_common_rolls = (attrs) => {
-		getAttrs(attrs, (v) => {
-			const found = attrs.find(mod => { return mod.includes("_modifier") });
-			const name  = found.split("_modifier")[0];
-			let numbers = [];
-
-			//DEFENSE & SOAK HAVE TWO EXTRA ATTRIBUTES. TEMP IS NEEDED BUT ONLY IF THE FLAG IS CHECKED IN SETTINGS
-			const array = name === "defense" || name === "soak" ? (v[`${name}_temp_flag`] === "on") ? attrs.splice(0, 4) : attrs.splice(0, 3) : attrs;
-
-			_.each(array, (attr) => { 
-				numbers.push(parseInt(v[`${attr}`]) || 0); 
-			});
-        	const add = (a, b) => a + b, sum = numbers.reduce(add);
-
-			setAttrs({[`${name}`]: sum});
-		});
-	};
-
-	//Calculate Movement Rates
-		var update_movement = () => {
-			getAttrs(["agility", "walk_modifier", "run_modifier"], (v) => {
-				const agi = parseInt(v.agility) || 0, wmod = parseInt(v.walk_modifier) || 0, rmod = parseInt(v.run_modifier) || 0;
-				let update = {};
-				update["walk"] = (agi * 2) + wmod;
-				update["run"] = (agi * 4) + rmod;
-				setAttrs(update);
-			});
-		};
-
 	//Update condition tracks
 	const update_track = track => {
 		let attrs = [`${track}_modifier`];
@@ -3888,7 +3892,7 @@ const onepointthreefive = () => {
 	//Calculate Initiatves
 	const update_initiative = () => {
 		getAttrs(["reaction", "intuition", "initiative_modifier", "initiative_temp", "initiative_temp_flag"], v => {
-			v = processTempFlags(`initiative_temp_flag`, `initiative_temp`, v);
+			v = functions.processTempFlags(`initiative_temp_flag`, `initiative_temp`, v);
             v = functions.parseIntegers(v);
             const base = v.reaction + v.intuition, bonus = functions.calculateBonuses(v), total = base + bonus;
 
@@ -3903,7 +3907,7 @@ const onepointthreefive = () => {
 		getAttrs(["initiative_dice_modifier", "edge_toggle", "initiative_dice_temp", "initiative_dice_temp_flag"], v => {
 			const edgeFlag = v.edge_toggle === "@{edge}" ? true : false;
 
-			v = processTempFlags(`initiative_dice_temp_flag`, `initiative_dice_temp`, v);
+			v = functions.processTempFlags(`initiative_dice_temp_flag`, `initiative_dice_temp`, v);
 			v = functions.parseIntegers(v);
 
 			const bonus = functions.calculateBonuses(v), total = Math.min(bonus+1,5);
