refactor eventhandlers, start condition tracks

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -3394,28 +3394,32 @@
 <input type="hidden" name="attr_unarmedcombat" min="0" value="0" />
 <script type="text/worker">
   const sheetAttribues = {
-	attributes: ["body", "agility", "reaction", "strength", "willpower", "logic", "intuition", "charisma", "edge"],
-	translationsAttributes: ["attribute", "body", "agility", "reaction", "strength", "willpower", "logic", "intuition", "charisma", "edge", "none"],
+	attributes: ['body', 'agility', 'reaction', 'strength', 'willpower', 'logic', 'intuition', 'charisma', 'edge'],
+	translationsAttributes: ['attribute', 'body', 'agility', 'reaction', 'strength', 'willpower', 'logic', 'intuition', 'charisma', 'edge', 'none'],
 	calculatedAttributes: ['body', 'agility', 'reaction', 'strength', 'willpower', 'logic', 'intuition','charisma','magic', 'resonance'],
-	repeating: ["quality", "martial", "items", "range", "melee", "armor", "spell", "preps", "ritual", "powers", "forms", "vehicle", "augementations", "lifestyle", "contacts", "programs"],
-	repeatingSkills: ["active", "knowledge", "language"],
+	repeating: ['quality', 'martial', 'items', 'range', 'melee', 'armor', 'spell', 'preps', 'ritual', 'powers', 'forms', 'vehicle', 'augementations', 'lifestyle', 'contacts', 'programs'],
+	repeatingSkills: ['active', 'knowledge', 'language'],
   tabs: [`core`, `arms`, `augs`, `gear`, `magic`, `matrix`, `social`, `vehicle`, `options`],
-	woundCalculation: ["high_pain_tolerance", "low_pain_tolerance", "damage_compensators_physical", "damage_compensators_stun", "stun", "physical"],
+	woundCalculation: ['high_pain_tolerance', 'low_pain_tolerance', 'damage_compensators_physical', 'damage_compensators_stun', 'stun', 'physical'],
   attributeLimits: ['mental_limit', 'physical_limit', 'social_limit'],
-	mental_limit: ["intuition", "willpower", "logic"],
-	physical_limit: ["body", "reaction", "strength"],
-	social_limit: ["essence", "willpower", "charisma"],
-  lift_carry: ["body", "strength", "lift_carry_modifier"],
-  overflow: ["body", "overflow_modifier"],
-  soak: ["body", "armor_rating", "soak_modifier", "soak_temp", `soak_temp_flag`],
-  defense: ["reaction", "intuition", "defense_modifier", "defense_temp", `defense_temp_flag`],
-  judge_intentions: ["charisma", "intuition", "judge_intentions_modifier"],
-  composure: ["charisma", "willpower", "composure_modifier"],
-  memory: ["logic", "willpower", "memory_modifier"]
+	mental_limit: ['intuition', 'willpower', 'logic'],
+	physical_limit: ['body', 'reaction', 'strength'],
+	social_limit: ['essence', 'willpower', 'charisma'],
+  lift_carry: ['body', 'strength', 'lift_carry_modifier'],
+  overflow: ['body', 'overflow_modifier'],
+  soak: ['body', 'armor_rating', 'soak_modifier', 'soak_temp', `soak_temp_flag`],
+  defense: ['reaction', 'intuition', 'defense_modifier', 'defense_temp', `defense_temp_flag`],
+  judge_intentions: ['charisma', 'intuition', 'judge_intentions_modifier'],
+  composure: ['charisma', 'willpower', 'composure_modifier'],
+  memory: ['logic', 'willpower', 'memory_modifier'],
+  conditionTracks: ['stun', 'physical'],
+  physical: ['physical_modifier', 'body', 'sheet_type', 'flag_drone'],
+  stun: ['stun_modifier', 'willpower'],
+  derivedAttributes: ['memory', 'composure', 'defense', 'soak', 'overflow', 'judge_intentions', 'lift_carry']
 }
 
-const errorMessage = error => console.error(`%c ${error}`, "color: maroon; font-weight:14px; font-weight:bold;");
-const warningMessage = error => console.warn(`%c ${error}`, "color: darkorange; font-weight:14px; font-weight:bold;");
+const errorMessage = error => console.error(`%c ${error}`, 'color: maroon; font-weight:14px; font-weight:bold;');
+const warningMessage = error => console.warn(`%c ${error}`, 'color: darkorange; font-weight:14px; font-weight:bold;');
 
 const functions = {
   convertIntegerNegative: number => number > 0 ? -Math.abs(number) : number,
@@ -3448,7 +3452,7 @@ const functions = {
 
   shadowrun: {
     attributeFactory: attrs => {
-      attrs = functions.shadowrun.processTempFlags(attrs)
+      attrs = functions.shadowrun.findFlagInKeys(attrs) ? functions.shadowrun.processTempFlags(attrs) : attrs
       attrs = functions.parseIntegers(attrs)
       attrs = functions.shadowrun.calculateBonuses(attrs)
       return attrs
@@ -3464,6 +3468,7 @@ const functions = {
       }
       return attrs
     },
+    calculateConditionTracks: attrs => Math.ceil(attrs.attribute/2) + attrs.base + attrs.modifier,
     calculateLimitTotal: attrs => Math.ceil((attrs[0] + attrs[1] + (attrs[2] * 2))/3),
     calculateRunSpeed: (agility, modifier) => (agility * 4) + modifier,
     calculateWalkSpeed:(agility, modifier) => (agility * 2) + modifier,
@@ -3472,14 +3477,14 @@ const functions = {
       try {
         const tempFlag = functions.shadowrun.findFlagInKeys(attrs)
         const attrName = tempFlag.split('_temp_flag')[0]
-        attrs[`${tempFlag}`] === "on" ? false : delete attrs[`${attrName}_temp`];
+        attrs[`${tempFlag}`] === 'on' ? false : delete attrs[`${attrName}_temp`];
         delete attrs[`${tempFlag}`];
         return attrs
       } catch (error) {
         errorMessage(error)
       }
     },
-    shotsFired: (shots, trigger) => shots > 0 && trigger.includes("remove") ? shots -= 1 : trigger.includes("add") ? shots += 1 : shots,
+    shotsFired: (shots, trigger) => shots > 0 && trigger.includes('remove') ? shots -= 1 : trigger.includes('add') ? shots += 1 : shots,
     updateLimitTotal: attrs => {
       attrs.essence ? Math.ceil(attrs.essence) || 0 : false;
       return functions.shadowrun.calculateLimitTotal(Object.values(attrs))
@@ -3548,7 +3553,7 @@ const updateAttributes = (array, attribute) => {
       attrs = functions.shadowrun.attributeFactory(attrs)
       const base = attrs[`${attribute}_base`]
       functions.setAttributes({
-        [attribute]: unctions.sumIntegers([base, attrs.bonus]),
+        [attribute]: functions.sumIntegers([base, attrs.bonus]),
         [`display_${attribute}`]: functions.shadowrun.buildDisplay(base, attrs.bonus)
       })
     })
@@ -3562,7 +3567,6 @@ const updateLimitTotal = attrs => {
   return functions.shadowrun.calculateLimitTotal(Object.values(attrs))
 }
 
-//physical, social, mental
 const updateLimits = attributeLimit => {
   try {
     const array = sheetAttribues[attributeLimit].concat([`${attributeLimit}_modifier`, `${attributeLimit}_temp`, `${attributeLimit}_temp_flag`])
@@ -3582,7 +3586,7 @@ const updateLimits = attributeLimit => {
 
 const updateMovement = () => {
   try {
-    getAttrs(["agility", "walk_modifier", "run_modifier"], attrs => {
+    getAttrs(['agility', 'walk_modifier', 'run_modifier'], attrs => {
       attrs = functions.parseIntegers(attrs)
       functions.setAttributes({
         walk: functions.shadowrun.calculateWalkSpeed(attrs.agility, attrs.walk_modifier),
@@ -3600,6 +3604,16 @@ const updateDerivedAttribute = derivedAttribute => {
       attrs = functions.shadowrun.attributeFactory(attrs)
       const sum = functions.sumIntegers(Object.values(attrs))
       functions.setAttributes({[derivedAttribute]: sum})
+    })
+  } catch (error) {
+    errorMessage(error)
+  }
+}
+
+const updateConditionTracks = derivedAttribute => {
+  try {
+    getAttrs(sheetAttribues[derivedAttribute], attrs => {
+      attrs = functions.shadowrun.attributeFactory(attrs)
     })
   } catch (error) {
     errorMessage(error)
@@ -3693,57 +3707,28 @@ const onepointthreefive = () => {
 
 	on('change:agility change:walk_modifier change:run_modifier', () => updateMovement())
 
-  on('change:body change:strength change:lift_carry_modifier', () => updateDerivedAttribute('lift_carry'))
+	on('change:body', () => update_track('physical'))
 
-  on('change:body change:strength', () => updateLimits('physical_limit'))
-
-	on('change:body', () => {
-      updateDerivedAttribute('overflow')
-      updateDerivedAttribute('soak')
-			update_track('physical')
-	})
-
-  on('change:reaction change:intuition', () => {
-    updateDerivedAttribute('defense')
-    update_initiative()
-  })
-
-  on('change:reaction', () => updateLimits('physical_limit'))
-
-  on('change:intuition', () => {
-    updateLimits('mental_limit')
-    updateDerivedAttribute('judge_intentions')
-  })
+  on('change:reaction change:intuition', () => update_initiative())
 
 	on('change:willpower', () => {
-    updateDerivedAttribute('composure')
-    updateDerivedAttribute('memory')
-		update_track('stun')
-		updateLimits('social_limit')
-		updateLimits('mental_limit')
+		updateConditionTracks('stun')
 	})
 
-  on('change:logic change:memory_modifier', () => updateDerivedAttribute('memory'))
+  sheetAttribues.derivedAttributes.forEach(derivedAttribute => {
+    sheetAttribues[derivedAttribute].forEach(attr => on(`change:${attr}`, () => updateDerivedAttribute(derivedAttribute)))
+  })
 
-	on('change:logic', () => updateLimits('mental_limit')) 
-
-  on('change:charisma change:composure_modifier', eventinfo => updateDerivedAttribute('composure'))
-
-  on('change:charisma change:judge_intentions_modifier', eventinfo => updateDerivedAttribute('judge_intentions'))
-
-  on('change:charisma change:essence', eventinfo => updateLimits('social_limit'))
+  sheetAttribues.attributeLimits.forEach(attributeLimit => {
+    sheetAttribues[attributeLimit].forEach(attr => on(`change:${attr}`, () => updateLimits(attributeLimit)))
+    on(`change:${attributeLimit}_modifier change:${attributeLimit}_temp change:${attributeLimit}_temp_flag`, () => updateLimits([`${attributeLimit}`]))
+  })
 
 	on('change:physical_modifier change:flag_drone', () => update_track('physical'))
 
 	on('change:stun_modifier', () => update_track('stun'))
 
 	on('change:initiative_modifier change:initiative_temp change:initiative_temp_flag', () => update_initiative())
-
-	on('change:defense_modifier change:defense_temp change:defense_temp_flag', () => updateDerivedAttribute('defense'))
-
-	on('change:armor_rating change:soak_modifier change:soak_temp change:soak_temp_flag', () => updateDerivedAttribute('soak'))
-
-  sheetAttribues.attributeLimits.forEach(attr => on(`change:${attr}_modifier change:${attr}_temp change:${attr}_temp_flag`, () => updateLimits([`${attr}`])))
 
 	sheetAttribues.woundCalculation.forEach(attr => on(`change:${attr}`, () => update_wounds()))
 
@@ -3837,7 +3822,7 @@ const onepointthreefive = () => {
 		let attrs = [`${track}_modifier`];
 		track === "stun" ? attrs.push("willpower") : attrs.push("body", "sheet_type", "flag_drone");
 
-		getAttrs(attrs, v =>{
+		getAttrs(attrs, v => {
 			const stat = parseInt(v[`${attrs[1]}`]) || 0; //Willpower or Body
 			const mod = parseInt(v[`${track}_modifier`]) || 0;
 			let update = {};
